--- a/Style.css
+++ b/Style.css
@@ -4,12 +4,38 @@
 
 body{
     margin:0px;
+    display:flex;
+    flex-direction: column;
     background-color: #202020;
 }
-
+h1{
+    font-family: "Inter", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    text-decoration: none;
+    font-size:25px;
+    color:#FFFFFF;
+}
+p{
+    font-family: "Inter", serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+    text-decoration: none;
+    color:#FFFFFF;
+}
+a{
+    color:#FFFFFF;
+    font-family: "Inter", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    text-decoration: none;
+}
 nav{
     display:flex;
-    background-color: #2b2b2b;
+    background-color: #282828;
     height:65px;
 }
 
@@ -17,7 +43,7 @@ nav > header{
     width:max-content;
     height:max-content;
     flex-shrink: 0;
-    margin:auto 0px auto 15px;
+    margin:auto 0px auto 25px;
 }
 
 nav > header > a{
@@ -31,4 +57,28 @@ nav > header > a{
 }
 nav > header > a:visited{
     text-decoration: none;
+}
+nav > div{
+    margin:auto auto auto 30px;
+}
+nav > div > a:visited{
+    text-decoration: none;
+}
+#Content{
+    display:inline-block;
+    flex-grow: 1;
+    margin-top:20px;
+}
+#AboutMe{
+    margin:0px auto 0px auto;
+    width:60%;
+    min-width:10%;
+    background-color: #2f2f2f;
+    text-align: center;
+    padding-bottom: 50px;;
+}
+#AboutMe > div{
+    margin-left:auto;
+    margin-right:auto;
+    width:50%;
 }
